# ros2_nav_simulation

./: README.md
src/bringup/: CMakeLists.txt  package.xml
src/bringup/behavior_tree/: navigate_through_pose_w_replanning_and_recovery.xml
src/bringup/config/: nav2_params.yaml  nav2_params_pid.yaml
src/bringup/launch/: bringup.launch.py  navigation_launch.py
src/bringup/map/: RMUC2026.yaml  RMUL2026.yaml  rmuc_2025.yaml  test.yaml
src/bringup/rviz/: nav2_default_view.rviz  rviz2_waypoint_test.rviz  test.rviz
src/decision_executor/: CMakeLists.txt  package.xml
src/decision_executor/config/: decision_config.yaml  decision_config_no_center.yaml
src/decision_executor/include/decision_executor/: DecisionExecutor.hpp  DecisionNode.hpp  FieldMapper.hpp
src/decision_executor/launch/: decision_executor.launch.py
src/decision_executor/scripts/: inspect_referee.py
src/decision_executor/src/: DecisionExecutor.cpp  DecisionNode.cpp  FieldMapper.cpp
src/dynamic_message_dashboard_ros2/: package.xml  setup.cfg  setup.py
src/dynamic_message_dashboard_ros2/config/: config_auto_save.json  default_config.json  referee_config_export.json
src/dynamic_message_dashboard_ros2/dynamic_message_dashboard_ros2/: dynamic_message_dashboard_ros2.py
src/dynamic_message_dashboard_ros2/launch/: dynamic_message_dashboard_ros2.launch.py
src/livox_laser_simulation_RO2/src/: livox_points_plugin.cpp
src/localization/Super-LIO-ros2/src/super_lio/: CMakeLists.txt
src/localization/Super-LIO-ros2/src/super_lio/config/: livox_360.yaml  relocation.yaml
src/localization/Super-LIO-ros2/src/super_lio/launch/: relocation.py
src/localization/Super-LIO-ros2/src/super_lio/src/ros/: ROSWrapper.cpp
src/localization/lio_relocalization/: CMakeLists.txt  package.xml
src/localization/lio_relocalization/config/: relocation.yaml
src/localization/lio_relocalization/launch/: lio_relocalization.launch.py
src/localization/lio_relocalization/src/: relocalization_node.cpp  relocalizer.hpp
src/localization/point_lio/config/: mid360.yaml
src/localization/point_lio/launch/: point_lio.launch.py
src/localization/point_lio/src/: laserMapping.cpp
src/localization/small_point_lio/: CMakeLists.txt
src/localization/small_point_lio/config/: mid360.yaml
src/localization/small_point_lio/launch/: small_point_lio.launch.py
src/localization/small_point_lio/src/: small_point_lio_node.cpp
src/nav2_waypoint_panel/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
src/nav2_waypoint_panel/include/nav2_waypoint_panel/: waypoint_panel.hpp  waypoint_tool.hpp
src/nav2_waypoint_panel/src/: waypoint_panel.cpp  waypoint_tool.cpp
src/navigation2_bringup/: CMakeLists.txt  package.xml
src/navigation2_bringup/config/: nav2_params.yaml
src/navigation2_bringup/launch/: navigation2.launch.py
src/navigation2_bringup/maps/: rmuc_2025.yaml
src/pb_omni_pid_pursuit_controller/include/pb_omni_pid_pursuit_controller/: pid.hpp
src/pb_omni_pid_pursuit_controller/src/: omni_pid_pursuit_controller.cpp  pid.cpp
src/sentry_msgs/: CMakeLists.txt  package.xml
src/sentry_msgs/msg/: Referee.msg
src/serial_interfaces/: CMakeLists.txt  package.xml
src/serial_interfaces/include/serial_interfaces/: qd_referee_system.hpp  serial_interfaces.hpp
src/serial_interfaces/launch/: serial_interfaces.launch.py
src/serial_interfaces/src/: serial_interfaces.cpp
src/simulation/: CMakeLists.txt  package.xml  setup.py
src/simulation/launch/: gazebo.launch.py  simulation.launch.py
src/simulation/rviz/: test.rviz
src/simulation/urdf/: my_car.xacro  simulation_waking_robot.xacro
src/simulation/world/: RMUC2025.world  RMUC2026.world  empty.world  rmuc2025.world  test.rviz
src/simulation/worlds/: rmuc2025.world
src/visual-decision-editor/: index.html  package-lock.json  package.json  save_data.json  vite.config.ts
src/visual-decision-editor/install/: local_setup.sh  setup.sh
src/visual-decision-editor/log/: latest_build
src/visual-decision-editor/src/: App.tsx  index.css
src/visual-decision-editor/src/components/: CanvasDecisionTree.tsx  MapEditor.tsx  RunPanel.tsx
src/visual-decision-editor/src/engine/: DecisionEngine.ts  DecisionTreeTypes.ts  Status.ts  fieldMapper.ts  parseCanvasToTree.ts  pointInPolygon.ts  useDecisionEngine.ts
src/visual-decision-editor/src/ros/: RosContext.tsx  types.ts
src/visual-decision-editor/src/types/: index.ts
src/visual-decision-editor/src/utils/: Storage.ts  YamlExporter.ts  YamlImporter.ts  coordinateCalculator.ts
