<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>decision_executor</name>
  <version>1.0.0</version>
  <description>RoboMaster Decision Executor - Executes YAML-defined decision trees for autonomous navigation</description>
  <maintainer email="user@example.com">RoboMaster Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>sentry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>yaml-cpp</depend>
  <depend>rosidl_typesupport_introspection_cpp</depend>
  <depend>rosidl_runtime_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
