<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_waypoint_panel</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="2123242623@qq.com">z</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>geometry_msgs</depend>

  <depend>visualization_msgs</depend>
  <depend>pluginlib</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rviz_common plugin="${prefix}/plugin_description.xml"/>
  </export>

</package>
