<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lio_relocalization</name>
  <version>1.0.0</version>
  <description>global relocalization node: subscribes to an external LIO's odom-frame point cloud and odometry, loads a pre-built PCD map, performs a one-shot NDT+ICP alignment, and continuously broadcasts the map->odom TF correction so the external odom tracks the map.</description>
  <maintainer email="todo@todo.todo"></maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>ament_index_cpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <build_depend>eigen</build_depend>
  <build_depend>libpcl-all-dev</build_depend>

  <exec_depend>libpcl-all</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
